[package]
name = "ayane"
version = "0.1.0"
authors = ["Kengxxiao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tokio = { version = "1", features = ["full"] }
once_cell = "1.8.0"
sqlite = "0.26.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures = "0.3"
actix-http = "2.2"
futures-util = "0.3"
rmp-serde = "0.15"
aes = "0.6"
block-modes = "0.7"
base64 = "0.13"
rand = "0.8"
diesel = { version = "1", features = ["mysql", "r2d2"]}
uuid = { version = "0.7", features = ["serde", "v4"] }
md-5 = "0.9.1"
lazy_static = "1.3.0"